PSP/Proyectos/LoginSpring_AdrianSaavedra/src/main/java/org/example/loginspring_adriansaavedra/common/errors/ApiError.java
package org.example.loginspring_adriansaavedra.common.errors;

import org.springframework.http.HttpStatus;

public record ApiError(String message, HttpStatus status) {
}
